@@ -20,6 +20,7 @@ typedef enum
    BSON_VALIDATE_DOLLAR_KEYS     = (1 << 1),
    BSON_VALIDATE_DOT_KEYS        = (1 << 2),
    BSON_VALIDATE_UTF8_ALLOW_NULL = (1 << 3),
+   BSON_VALIDATE_EMPTY_KEYS      = (1 << 4),
 } bson_validate_flags_t;
 
 bool
@@ -47,6 +48,7 @@ bson_validate (const bson_t         *bson,
       <item><p><code>BSON_VALIDATE_UTF8_ALLOW_NULL</code> will specify that UTF-8 strings are allowed to have embedded NULL bytes. Many UTF-8 implementations use a 2-byte squence for embedded NULLs so that they work with stanard libc functions. Libbson expects this by default.</p></item>
       <item><p><code>BSON_VALIDATE_DOLLAR_KEYS</code> will request that all key names are checked to ensure they do not start with the ASCII dollar character (<code>$</code>).</p></item>
       <item><p><code>BSON_VALIDATE_DOT_KEYS</code> will request that all key names are checked to ensure they do not contain an ASCII dot (<code>.</code>) character.</p></item>
+      <item><p><code>BSON_VALIDATE_EMPTY_KEYS</code> will request that zero-length key names are prohibited.</p></item>
     </list>
   </section>
 
